grid system working for desktop

--- a/testimonials-grid-section-main/style.css
+++ b/testimonials-grid-section-main/style.css
@@ -1,15 +1,81 @@
 .container > div {
-    background:lightblue;
+
     padding: 1em;
+    border-radius: 12px;
 }
 
-.container > div:nth-child(odd){
-    background: grey;
+/*.container > div:nth-child(odd){*/
+/*    background: grey;*/
+/*}*/
+
+
+img {
+    border-radius: 50%;
+    border: grey solid;
+    display: inline-block;
 }
+
+h1 {
+    vertical-align: center;
+}
+
 
 
 .container {
+
+    margin-left: 100px;
+    margin-right: 100px;
     display: grid;
-    grid-template-columns: [first-col]50% [second-col]25% [thrid-col]25%;
-    grid-template-rows: [first-row]1fr [second-row]1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, auto);
+    /*grid-template-areas:*/
+    /*    "testimonial testimonial testimonial"*/
+    /*    "testimonial testimonial";*/
+
+    gap: 20px 20px;
+
+}
+
+
+
+.daniel {
+    background-color: blueviolet;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+
+}
+
+.jonathan {
+    background-color: cadetblue;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+
+.jeanette {
+    background-color: whitesmoke;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+.patrick {
+    color: white;
+    background-color: black;
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 2;
+}
+
+.kira {
+    background-color: whitesmoke;
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
