--- a/testimonials-grid-section-main/style.css
+++ b/testimonials-grid-section-main/style.css
@@ -14,10 +14,6 @@
 
     }
 
-    .daniel {
-        background-image: url("images/bg-pattern-quotation.svg");
-        background-repeat: no-repeat;
-        background-position: 80% 5%;
 }
 
 
@@ -42,11 +38,13 @@ body {
     border-radius: 12px;
 }
 
-/*.profile-title {*/
-/*    display: flex;*/
-/*    flex-flow: column;*/
-/*    align-content: center;*/
-/*    */
+.profile-title {
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+
+}
+
 
 
 /*}*/
@@ -76,6 +74,8 @@ p:nth-child(3) {
 
 
 
+
+
 img {
     float: left;
     border-radius: 50%;
@@ -91,7 +91,7 @@ h1 {
     align-items: center;
     vertical-align: center;
     font-size: 1em;
-    align-items: center;
+
     margin: 0;
 
 }
